--- a/sesac/data/java/user/src/main/resources/application.properties
+++ b/sesac/data/java/user/src/main/resources/application.properties
@@ -6,13 +6,15 @@ spring.datasource.username=root
 spring.datasource.password=imdla918
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.web.resources.add-mappings=false
+
 # 추가 설정
 
 # JPA가 생성하는 SQL을 콘솔에 출력
 spring.jpa.show-sql=true
 
 # 데이터베이스 스키마 자동 생성
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # batch size 설정
 spring.jpa.properties.hibernate.default_batch_fetch_size=100
