--- a/TypeScript/typechain/tsconfig.json
+++ b/TypeScript/typechain/tsconfig.json
@@ -3,8 +3,10 @@
   "compilerOptions": {
     "outDir": "build",
     "target": "ES6",
-    "lib": ["ES6", "DOM"],
+    "lib": ["ES6"],
     "strict": true,
-    "allowJs": true
+    // "allowJs": true, 자바스크립트와 타입스크립트 함께 사용 가능
+    "esModuleInterop": true,
+    "module": "CommonJS"
   }
 }
